--- a/package.json
+++ b/package.json
@@ -84,5 +84,18 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "main": ".eslintrc.js",
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/msabic/vue.git"
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/msabic/vue/issues"
+  },
+  "homepage": "https://github.com/msabic/vue#readme"
 }
