--- a/Api_For_App/Api_For_App/Api_For_App.csproj
+++ b/Api_For_App/Api_For_App/Api_For_App.csproj
@@ -132,6 +132,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\TestClass.cs" />
+    <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
