--- a/Api_For_App/DBCommunication/DBCommunication.csproj
+++ b/Api_For_App/DBCommunication/DBCommunication.csproj
@@ -63,13 +63,14 @@
     </Compile>
     <Compile Include="DBCommunication.cs" />
     <Compile Include="DBCommunicationAdmin.cs" />
+    <Compile Include="DBCommunicationDELETE\DeleteDoctor.cs" />
     <Compile Include="DBCommunicationGET\GetDoctor.cs" />
+    <Compile Include="DBCommunicationGET\GetDoctorForID.cs" />
     <Compile Include="DBCommunicationGET\GetUser.cs" />
     <Compile Include="DBCommunicationNEW\AddDoctor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="DBCommunicationDELETE\" />
     <Folder Include="DBCommunicationEDIT\" />
   </ItemGroup>
   <ItemGroup>
